vlib/v/checker/tests/cast_voidptr_to_struct_alias_err.out
vlib/v/checker/tests/cast_voidptr_to_struct_alias_err.vv:20:6: error: cannot cast `voidptr` to `AliasFoo1` (alias to `C.Foo1`)
   18 | fn main() {
   19 |     // test cast `voidptr/nil` to `alias`
   20 |     _ = AliasFoo1(unsafe { nil })
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~
   21 |     _ = AliasFoo2(unsafe { nil })
   22 |     _ = AliasBar(unsafe { nil })
vlib/v/checker/tests/cast_voidptr_to_struct_alias_err.vv:21:6: error: cannot cast `voidptr` to `AliasFoo2` (alias to `C.Foo2`)
   19 |     // test cast `voidptr/nil` to `alias`
   20 |     _ = AliasFoo1(unsafe { nil })
   21 |     _ = AliasFoo2(unsafe { nil })
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~
   22 |     _ = AliasBar(unsafe { nil })
   23 |
vlib/v/checker/tests/cast_voidptr_to_struct_alias_err.vv:22:6: error: cannot cast `voidptr` to `AliasBar` (alias to `Bar`)
   20 |     _ = AliasFoo1(unsafe { nil })
   21 |     _ = AliasFoo2(unsafe { nil })
   22 |     _ = AliasBar(unsafe { nil })
      |         ~~~~~~~~~~~~~~~~~~~~~~~~
   23 | 
   24 |     // test cast `voidptr/nil` to `non-alias` and has `typedef`
vlib/v/checker/tests/cast_voidptr_to_struct_alias_err.vv:25:8: error: cannot cast `voidptr` to struct
   23 | 
   24 |     // test cast `voidptr/nil` to `non-alias` and has `typedef`
   25 |     _ = C.Foo1(unsafe { nil })
      |           ~~~~~~~~~~~~~~~~~~~~
   26 |     // test cast `voidptr/nil` to `non-alias` and no `typedef`
   27 |     _ = C.Foo2(unsafe { nil })
vlib/v/checker/tests/cast_voidptr_to_struct_alias_err.vv:27:8: error: cannot cast `voidptr` to struct
   25 |     _ = C.Foo1(unsafe { nil })
   26 |     // test cast `voidptr/nil` to `non-alias` and no `typedef`
   27 |     _ = C.Foo2(unsafe { nil })
      |           ~~~~~~~~~~~~~~~~~~~~
   28 | }
